--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	    <p>Sentuh untuk Mulai ✨</p>
 	   <div class="awalan">
 	     <svg class='line' fill='none' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'><g transform='translate(2.000000, 2.000000)'><path d='M9.27542857,0.714285714 C14.0030476,0.714285714 17.836381,4.54666667 17.836381,9.2752381 C17.836381,14.0038095 14.0030476,17.8361905 9.27542857,17.8361905 C4.54685714,17.8361905 0.71447619,14.0038095 0.71447619,9.2752381 C0.71447619,4.54666667 4.54685714,0.714285714 9.27542857,0.714285714 Z'></path><path d='M17.8989524,16.487619 C18.678,16.487619 19.3094286,17.12 19.3094286,17.8980952 C19.3094286,18.6780952 18.678,19.3095238 17.8989524,19.3095238 C17.1199048,19.3095238 16.4875238,18.6780952 16.4875238,17.8980952 C16.4875238,17.12 17.1199048,16.487619 17.8989524,16.487619 Z'></path></g></svg>
-	     <label style="font-size:16px"> hbd yaya 😊🥳</label>
+	     <label style="font-size:16px"> hbd sayangkuu yaya 😊🥳</label>
 	   </div>
 	</div>
   </div>
@@ -57,11 +57,13 @@
                 <div class="heart a1"></div>
                 <div class="heart a2"></div>
                 <div class="heart a3"></div>
+				<div class="heart a4"></div>
             </div>
             <div class="sparkles">
                 <div class="sparkle s1"></div>
                 <div class="sparkle s2"></div>
                 <div class="sparkle s3"></div>
+				<div class="sparkle s4"></div>
             </div>
         </div>
     </div>
@@ -90,7 +92,7 @@ Terima kasih telah menjadi pribadi yang luar biasa, telah menginspirasi, dan tel
 Selamat ulang tahun, Yaya! Semoga panjang umur, sehat selalu, dan selalu dalam lindungan Tuhan.
 ,🎉🥳😊😁🎂✨ 🫶</p>
       <p id="pesanSurat3">Sekali lagi<br><i class='fontAlt'> selamat' ulang tahun yaya</i> 😁😝😻💐</p>
-	  <p id="pesanSurat4"><i class='fontAlt'> dari syahrull untuk yaya</i> 🩷</p>
+	  <p id="pesanSurat4"><i class='fontAlt'> dari syahrul untuk yaya</i> 🩷</p>
   </div>
   
     <div id="scontainer">
