--- a/index.html
+++ b/index.html
@@ -86,11 +86,8 @@
       <p id="pesanSurat1"><i class='fontAlt'>inii pesann buattt yaya tolong baca ya dengan benar hehehe!</i> 🥳</p>
       <p id="pesanSurat2">Selamat Ulang Tahun, Yaya!
 Di hari yang spesial ini, aku ingin mengucapkan selamat ulang tahun dengan penuh kebahagiaan dan harapan terbaik untukmu. Hari ini bukan hanya sekadar bertambahnya usia, tetapi juga menjadi momen untuk bersyukur atas segala pencapaian, kebahagiaan, dan pengalaman yang telah kamu lalui.
-Yaya, kamu adalah seseorang yang luar biasa. Kebaikan hatimu, semangatmu, dan senyumanmu selalu memberikan kehangatan bagi orang-orang di sekitarmu. Semoga di usia baru ini, kamu semakin bijaksana, semakin kuat menghadapi tantangan hidup, dan semakin dekat dengan impian-impianmu. Apa pun yang kamu cita-citakan, aku berharap semua bisa terwujud dengan mudah dan penuh keberkahan.
-Semoga kebahagiaan selalu menyertaimu di setiap langkah yang kamu ambil. Semoga setiap hari yang kamu jalani dipenuhi dengan cinta, tawa, dan kesuksesan. Jangan pernah berhenti berjuang dan percaya bahwa kamu bisa mencapai apa pun yang kamu inginkan.
-Terima kasih telah menjadi pribadi yang luar biasa, telah menginspirasi, dan telah membawa kebahagiaan bagi banyak orang, termasuk aku. Nikmati hari istimewamu ini dengan penuh sukacita, karena kamu pantas mendapatkan yang terbaik dalam hidup ini.
-Selamat ulang tahun, Yaya! Semoga panjang umur, sehat selalu, dan selalu dalam lindungan Tuhan.
-,🎉🥳😊😁🎂✨ 🫶</p>
+Tepat pada hari ini umur kamu udah nambah 1 tahun. Semoga rezeki kamu di lancarkann dan segala urusannya dimudahkan yaa, semoga kamu sehatt terus yaa, aku harap kamu bisa menjadi pribadi yang lebih baik kedepannya,tambah dewasa, terimakasi telah menjadi perempuan yang kuat saat ini,dan terima kasihh sudah bertahan sampai selama ini.
+dan terimakasih udah menjadi perempuan yang hebat, bahagia selaluu yaaa I LOVE YOU 🎉🥳😊😁🎂✨ 🫶</p>
       <p id="pesanSurat3">Sekali lagi<br><i class='fontAlt'> selamat' ulang tahun yaya</i> 😁😝😻💐</p>
 	  <p id="pesanSurat4"><i class='fontAlt'> dari syahrul untuk yaya</i> 🩷</p>
   </div>
